--- a/index.html
+++ b/index.html
@@ -1103,7 +1103,7 @@
     <!-- Header -->
     <header class="header" id="header">
         <div class="nav-container">
-            <div class="logo" onclick="scrollToSection('hero')">ACENG.</div>
+            <div class="logo" onclick="scrollToSection('hero')">Ashraf El-Hafieza Rusmana</div>
             <nav class="nav-menu" id="navMenu">
                 <a class="nav-link" onclick="scrollToSection('hero')">Home</a>
                 <a class="nav-link" onclick="scrollToSection('about')">About</a>
@@ -1819,4 +1819,5 @@
         });
     </script>
 </body>
+
 </html>
