--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,7 @@
                 <div class="profile-img"><img src="profile.jpg" alt="Ashraf El-hafieza Rusmana" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;" /></div>
                 <div class="profile-info">
                     <h3>Ashraf El-hafieza Rusmana</h3>
-                    <p class="nickname">(Aceng)</p>
+                    <p class="nickname">Ashraf</p>
                     <div class="location">
                         <i class="fas fa-map-marker-alt"></i>
                         Bekasi, Indonesia
@@ -1821,3 +1821,4 @@
 </body>
 
 </html>
+
