--- a/index.html
+++ b/index.html
@@ -1160,7 +1160,7 @@
                 </div>
             </div>
             <div class="profile-card">
-                <div class="profile-img"><img src="profile.jpg" alt="Ashraf El-hafieza Rusmana" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;" /></div>
+                <div class="profile-img"><img src="profijpg" alt="Ashraf El-hafieza Rusmana" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;" /></div>
                 <div class="profile-info">
                     <h3>Ashraf El-hafieza Rusmana</h3>
                     <p class="nickname">Ashraf</p>
@@ -1821,4 +1821,5 @@
 </body>
 
 </html>
+
 
